# dc2019q-election_coin

./: .gitattributes  .gitmodules  info.yml
interaction/: Dockerfile  test.py  test.sh
service/: Ballot.h  CMakeLists.txt  Candidate.h  Configuration.h  Dockerfile  Election.h  Exchange.h  Vote.h  cfi_blacklist  election_coin.json  flag  main.cpp  run.sh
